--- a/KGERP/Views/Vouchers/RequisitionVoucherEntry.cshtml
+++ b/KGERP/Views/Vouchers/RequisitionVoucherEntry.cshtml
@@ -754,7 +754,7 @@
                 var voucherId = $("#hidVoucherId").val();
                 $.ajax({
                         type: "GET",
-                        url: "@Url.Action("UpdateVoucherStatus", "Vouchers")",
+                        url: "@Url.Action("UpdateRequisitionVoucherStatus", "Vouchers")",
                         datatype: "Json",
                         data: { voucherId: voucherId},
                         success: function (data) {
