--- a/KGERP/Views/Configuration/CommonSupplier.cshtml
+++ b/KGERP/Views/Configuration/CommonSupplier.cshtml
@@ -51,31 +51,31 @@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label for="message-text" class="col-form-label">Trade Licence No :</label>
-                                        @Html.TextBoxFor(model => model.ContactPerson, new { id = "txtContactPerson", @class = "form-control", @placeholder = "Trade licence no" })
-                                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                                        @Html.TextBoxFor(model => model.TradeLicenseNumber, new { id = "txtContactPerson", @class = "form-control", @placeholder = "Trade licence no", required = "required" })
+                                        @Html.ValidationMessageFor(model => model.TradeLicenseNumber, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
 
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label for="message-text" class="col-form-label">Contact Person :</label>
-                                        @Html.TextBoxFor(model => model.ContactPerson, new { id = "txtContactPerson", @class = "form-control", @placeholder = "Contact person" })
-                                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                                        @Html.TextBoxFor(model => model.ContactPerson, new { id = "txtContactPerson", @class = "form-control", @placeholder = "Contact person", required = "required" })
+                                        @Html.ValidationMessageFor(model => model.ContactPerson, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
 
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label for="message-text" class="col-form-label">NID Number :</label>
-                                        @Html.TextBoxFor(model => model.Phone, new { id = "txtPhone", @class = "form-control", @placeholder = "NID numbers" })
-                                        @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
+                                        @Html.TextBoxFor(model => model.NID, new { id = "txtPhone", @class = "form-control", @placeholder = "NID numbers", required = "required" })
+                                        @Html.ValidationMessageFor(model => model.NID, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
 
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label for="message-text" class="col-form-label">Phone Number :</label>
-                                        @Html.TextBoxFor(model => model.Phone, new { id = "txtPhone", @class = "form-control", @placeholder = "Phone number" })
+                                        @Html.TextBoxFor(model => model.Phone, new { id = "txtPhone", @class = "form-control", @placeholder = "Phone number", required = "required" })
                                         @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -83,7 +83,7 @@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label for="message-text" class="col-form-label">Email Address :</label>
-                                        @Html.TextBoxFor(model => model.Email, new { id = "txtEmail", type = "email", @class = "form-control", @placeholder = "Email address" })
+                                        @Html.TextBoxFor(model => model.Email, new { id = "txtEmail", type = "email", @class = "form-control", @placeholder = "Email address", required = "required" })
                                         @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -99,7 +99,7 @@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label for="message-text" class="col-form-label">Address :</label>
-                                        @Html.TextAreaFor(model => model.Address, new { id = "txtAddress", @class = "form-control", @placeholder = "Type address here", @rows = "1" })
+                                        @Html.TextAreaFor(model => model.Address, new { id = "txtAddress", @class = "form-control", @placeholder = "Type address here", @rows = "1", required = "required" })
                                         @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -107,7 +107,7 @@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label for="message-text" class="col-form-label">Bank Name :</label>
-                                        @Html.TextBoxFor(model => model.BankName, new { id = "txtBankName", @class = "form-control", @placeholder = "Bank name" })
+                                        @Html.TextBoxFor(model => model.BankName, new { id = "txtBankName", @class = "form-control", @placeholder = "Bank name", required = "required" })
                                         @Html.ValidationMessageFor(model => model.BankName, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -115,7 +115,7 @@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label for="message-text" class="col-form-label">Branch Name :</label>
-                                        @Html.TextBoxFor(model => model.BranchName, new { id = "txtBranchName", @class = "form-control", @placeholder = "Branch name" })
+                                        @Html.TextBoxFor(model => model.BranchName, new { id = "txtBranchName", @class = "form-control", @placeholder = "Branch name", required = "required" })
                                         @Html.ValidationMessageFor(model => model.BranchName, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -123,7 +123,7 @@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label for="message-text" class="col-form-label">A/C Name :</label>
-                                        @Html.TextBoxFor(model => model.ACName, new { id = "txtACName", @class = "form-control", @placeholder = "A/C name" })
+                                        @Html.TextBoxFor(model => model.ACName, new { id = "txtACName", @class = "form-control", @placeholder = "A/C name", required = "required" })
                                         @Html.ValidationMessageFor(model => model.ACName, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -131,7 +131,7 @@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label for="message-text" class="col-form-label">A/C Number :</label>
-                                        @Html.TextBoxFor(model => model.ACNo, new { id = "txtACNo", @class = "form-control", @placeholder = "A/C number" })
+                                        @Html.TextBoxFor(model => model.ACNo, new { id = "txtACNo", @class = "form-control", @placeholder = "A/C number", required = "required" })
                                         @Html.ValidationMessageFor(model => model.ACNo, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -139,16 +139,16 @@
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <label for="message-text" class="col-form-label">Bank Routing Number :</label>
-                                        @Html.TextBoxFor(model => model.ACNo, new { id = "txtACNo", @class = "form-control", @placeholder = "Bank routing number" })
-                                        @Html.ValidationMessageFor(model => model.ACNo, "", new { @class = "text-danger" })
+                                        @Html.TextBoxFor(model => model.BankRoutingNumber, new { id = "txtACNo", @class = "form-control", @placeholder = "Bank routing number", required = "required" })
+                                        @Html.ValidationMessageFor(model => model.BankRoutingNumber, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
 
                                 <div class="col-md-8">
                                     <div class="form-group">
                                         <label for="message-text" class="col-form-label">Remaks :</label>
-                                        @Html.TextAreaFor(model => model.Address, new { id = "txtAddress", @class = "form-control", @placeholder = "Type remarks here", @rows = "1" })
-                                        @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+                                        @Html.TextAreaFor(model => model.Remarks, new { id = "txtAddress", @class = "form-control", @placeholder = "Type remarks here", @rows = "1" })
+                                        @Html.ValidationMessageFor(model => model.Remarks, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
 
